Bug 439229 - xembedsniproxy systray icons are invisible on neon unstable
Summary: xembedsniproxy systray icons are invisible on neon unstable
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-27 18:17 UTC by Patrick Silva
Modified: 2021-06-29 11:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.3
Sentry Crash Report:


Attachments
screenshot (148.75 KB, image/png)
2021-06-27 18:17 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-06-27 18:17:49 UTC
Created attachment 139694 [details]
screenshot

SUMMARY
Some affected apps:

Tixati torrent client - available as .DEB package on https://www.tixati.com/download/

BiglyBT - .sh installer available on https://www.biglybt.com/download/

Jdownloader: flatpak available on https://flathub.org/apps/details/org.jdownloader.JDownloader

STEPS TO REPRODUCE
1. install any app mentioned above
2. open the app installed in the step 1
3. 

OBSERVED RESULT
The app open in the step 2 has no icon in system tray.
If I click on the arrow to show hidden systray icons, a bllue line
highlights the whole system tray and I see an empty space where
the systray icon should appear. Please see the attached screenshot.
If I kill xembedsniproxy process, the empty space disappears from system tray.

EXPECTED RESULT
visible xembedsniproxy systray icons

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 1 Bug Janitor Service 2021-06-28 14:02:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/950
Comment 2 David Redondo 2021-06-29 11:28:59 UTC
Git commit b9de2c8546874efcc993913bd55d0ef252b866a8 by David Redondo.
Committed on 29/06/2021 at 11:28.
Pushed by davidre into branch 'master'.

xembed-sni-proxy: Add Menu property

Because we did not have this property the adaptor used a default
constructed empty path. An empty path is invalid though and Qt
would refuse to marshall it.
Unconditionally advertise '/' as the menu path even though we don't have
one. Callers looking for a menu there will receive an error that there's
not the interface that they expected at the path.
FIXED-IN:5.22.3

M  +5    -1    xembed-sni-proxy/sniproxy.h

https://invent.kde.org/plasma/plasma-workspace/commit/b9de2c8546874efcc993913bd55d0ef252b866a8
Comment 3 David Redondo 2021-06-29 11:29:33 UTC
Git commit 4ade115a1248cc3c1128a3d10982429ab76cf8f8 by David Redondo.
Committed on 29/06/2021 at 11:29.
Pushed by davidre into branch 'Plasma/5.22'.

xembed-sni-proxy: Add Menu property

Because we did not have this property the adaptor used a default
constructed empty path. An empty path is invalid though and Qt
would refuse to marshall it.
Unconditionally advertise '/' as the menu path even though we don't have
one. Callers looking for a menu there will receive an error that there's
not the interface that they expected at the path.
FIXED-IN:5.22.3


(cherry picked from commit b9de2c8546874efcc993913bd55d0ef252b866a8)

M  +5    -1    xembed-sni-proxy/sniproxy.h

https://invent.kde.org/plasma/plasma-workspace/commit/4ade115a1248cc3c1128a3d10982429ab76cf8f8