xembed-sni-proxy/sniproxy.h
@@ -44,6 +44,7 @@ class SNIProxy : public QObject
     Q_PROPERTY(int WindowId READ WindowId)
     Q_PROPERTY(bool ItemIsMenu READ ItemIsMenu)
     Q_PROPERTY(KDbusImageVector IconPixmap READ IconPixmap)
+    Q_PROPERTY(QDBusObjectPath Menu READ menu CONSTANT)
 
 public:
     explicit SNIProxy(xcb_window_t wid, QObject *parent = nullptr);
@@ -52,7 +53,10 @@ public:
     void update();
     void resizeWindow(const uint16_t width, const uint16_t height) const;
     void hideContainerWindow(xcb_window_t windowId) const;
-
+    QDBusObjectPath menu() const
+    {
+        return QDBusObjectPath("/");
+    }
     /**
      * @return the category of the application associated to this item
      * @see Category
